# robust_fourier

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-package.yml
auxiliary_scripts/: 00_write_docs_equations.py  01_hermite_functions_largest_zeros.py  02_hermite_functions_largest_extremum.py  03_hermite_functions_tail_approximation.py  03_write_docs_equations.py  _equation_specs_hashes.json
auxiliary_scripts/files/: 01-01_hermite_functions_largest_zeros.npy  02-01_hermite_functions_largest_extrema.npy  03-01_hermite_functions_tail_gauss_sigmas.npy
docs/: robust_hermite_ft.mplstyle
examples/: 01_hermite_functions.py  02_hermite_function_stability.py  03_hermite_functions_numba_perf.py  03_hermite_functions_performance.ipynb  04_hermite_special_points.py  05_chebyshev_polynomials.py  05_hermite_functions_fourier_transform.py  06_chebyshev_polynomials_performance.ipynb  07-01_hermite_functions_fourier_basis.py  07-01_hermite_functions_fourier_basis_no_shift.py  07-02_hermite_functions_fourier_basis.py  07-02_hermite_functions_fourier_basis_time_space_shift.py  07-03_hermite_functions_fourier_basis_frequency_shift.py  07-04_hermite_functions_fourier_basis_shift_in_both.py  _07_utils.py
requirements/: base.txt  dev.txt  examples.txt  fast.txt  git_ci.txt
robust_hermite_ft/: __init__.py
robust_hermite_ft/hermite_functions/: .gitignore  __init__.py  _interface.py  _numba_funcs.py  _numpy_funcs.py  impl.ipynb
src/: __init__.py  hermite_functions.py
src/robust_fourier/: VERSION.txt  __init__.py
src/robust_fourier/_utils/: __init__.py  _validate.py  _x_preprocessing.py
src/robust_fourier/chebyshev_polynomials/: __init__.py  _class_interface.py  _func_interface.py  _numba_funcs.py  _numpy_funcs.py
src/robust_fourier/fourier_transform/: __init__.py
src/robust_fourier/hermite_functions/: __init__.py  _approximations.py  _class_interface.py  _func_interface.py  _hermite_largest_extrema_spline.py  _hermite_largest_roots_spline.py  _hermite_tail_gauss_sigma_spline.py  _numba_funcs.py  _numpy_funcs.py
src/robust_hermite_ft/: __init__.py
src/robust_hermite_ft/_utils/: __init__.py  numba_helpers.py  parallel_helpers.py
src/robust_hermite_ft/fourier_transform/: __init__.py  _fft_utils.py
src/robust_hermite_ft/hermite_functions/: __init__.py  _approximations.py  _c_hermite.pyx  _class_interface.py  _func_interface.py  _hermite_largest_extrema_spline.py  _hermite_largest_roots_spline.py  _interface.py  _numba_funcs.py  _numpy_funcs.py  _validate.py
tests/: conftest.py  test_hermite_functions.py  test_utils.py
tests/reference_files/: generate_hermfunc_references.py  generate_hermpoly_references.py
tests/reference_files/files/: hermite_functions_metadata.json  hermite_polynomials_metadata.json  ref_hermite_functions_order_000_alpha_0-point-5.npy  ref_hermite_functions_order_000_alpha_1-point-0.npy  ref_hermite_functions_order_000_alpha_2-point-0.npy  ref_hermite_functions_order_001_alpha_0-point-5.npy  ref_hermite_functions_order_001_alpha_1-point-0.npy  ref_hermite_functions_order_001_alpha_2-point-0.npy  ref_hermite_functions_order_250_alpha_0-point-5.npy  ref_hermite_functions_order_250_alpha_1-point-0.npy  ref_hermite_functions_order_250_alpha_2-point-0.npy  ref_hermite_polynomials_order_000_alpha_1-point-0.npy  ref_hermite_polynomials_order_001_alpha_0-point-5.npy  ref_hermite_polynomials_order_001_alpha_1-point-0.npy  ref_hermite_polynomials_order_001_alpha_2-point-0.npy  ref_hermite_polynomials_order_200_alpha_0-point-5.npy  ref_hermite_polynomials_order_200_alpha_1-point-0.npy  ref_hermite_polynomials_order_200_alpha_2-point-0.npy
tests/test_chebyshev_polynomials/: __init__.py  test_class_interface.py  test_implementations.py  utils.py
tests/test_fourier_transform/: __init__.py  test_fft_utils.py
tests/test_hermite_functions/: __init__.py  test_approximations.py  test_class_interface.py  test_hermite_functions.py  test_hermite_functions_class_interface.py  test_hermite_functions_func_interface.py  test_hermite_functions_implementations.py  test_implementations.py  test_validate.py  utils.py
tests/test_utils/: __init__.py  test_validate.py  test_x_preprocessing.py
